--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body bgcolor="#D1D0CE">
 <center><font size="7"><HR> <font color="#C04000"><p style="font-family:Brush Script MT">ThE GamE TeSt rAcInG </p></font> <HR><BR><p style="font-family:Impact">Checkout yours @ Here</p></font></center><br><br><br><br>
 <font size="7"><p style="font-family:Comic Sans MS">KTM RC 200 (BS6)</p></font><br>
-<img src="file:///C:/Users/hp/Desktop/BOOKING%20SITE/img1.jpg" alt="bike" width="750" height="550">
+<img src="img1.jpg" alt="bike" width="750" height="550">
 <pre>
 <font size="5">
 
@@ -16,7 +16,7 @@
 
 
 <font size="7"><p style="font-family:Comic Sans MS">KTM RC 390 (BS6)</p></font><br>
-<img src="file:///C:/Users/hp/Desktop/BOOKING%20SITE/img2.jpg" alt="car" width="750" height="550">
+<img src="img2.jpg" alt="car" width="750" height="550">
 <pre>
 <font size="5">
 
@@ -25,7 +25,7 @@
 
 
 <font size="7"><p style="font-family:Comic Sans MS">KTM RC 125</p></font><br>
-<img src="file:///C:/Users/hp/Desktop/BOOKING%20SITE/img3.jpg" alt="car" width="750" height="550">
+<img src="img3.jpg" alt="car" width="750" height="550">
 <pre>
 <font size="5">
 
@@ -33,7 +33,7 @@
 </font></pre>
 
 <font size="7"><p style="font-family:Comic Sans MS">KTM DUKE 200</p></font><br>
-<img src="file:///C:/Users/hp/Desktop/BOOKING%20SITE/img4.jpg" alt="car" width="750" height="550">
+<img src="img4.jpg" alt="car" width="750" height="550">
 <pre>
 <font size="5">
 
@@ -42,7 +42,7 @@
 </font></pre>
 
 <font size="7"><p style="font-family:Comic Sans MS">KTM DUKE 250</p></font><br>
-<img src="file:///C:/Users/hp/Desktop/BOOKING%20SITE/img5.jpeg" alt="car" width="750" height="550">
+<img src="img5.jpeg" alt="car" width="750" height="550">
 <pre>
 <font size="5">
 
